--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -17,6 +17,10 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      REACT_APP_API_SPREADSHEET_ID: ${{secrets.REACT_APP_API_SPREADSHEET_ID}}
+      REACT_APP_API_CLIENT_ID: {{secrets.REACT_APP_API_CLIENT_ID}}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
